--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -26,10 +26,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('home_page', { 'id': trick.id }) }}">show</a>
+                            <a href="{{ path('trick_details', { 'id': trick.id }) }}">show</a>
                         </li>
                         <li>
-                            <a href="{{ path('home_page', { 'id': trick.id }) }}">edit</a>
+                            <a href="{{ path('trick_edit', { 'id': trick.id }) }}">edit</a>
                         </li>
                     </ul>
                 </td>
