create new for tricksController

--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -40,7 +40,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('home_page') }}">Create a new trick</a>
+            <a href="{{ path('trick_new') }}">Create a new trick</a>
         </li>
     </ul>
 {% endblock %}
