--- a/templates/tricks/edit.html.twig
+++ b/templates/tricks/edit.html.twig
@@ -12,5 +12,10 @@
         <li>
             <a href="{{ path('home_page') }}">Back to the list</a>
         </li>
+        <li>
+            {{ form_start(delete_form) }}
+            <input type="submit" value="Delete">
+            {{ form_end(delete_form) }}
+        </li>
     </ul>
 {% endblock %}
