--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,4 +21,9 @@
         <button type="submit">login</button>
     </form>
 
+    <div>
+        <a href="{{ path('home_page') }}">S'inscrire.</a>
+        <a href="{{ path('home_page') }}">Mot de passe oublié.</a>
+    </div>
+
 {% endblock %}
