--- a/templates/security/activeAccount.html.twig
+++ b/templates/security/activeAccount.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ message }}
+    {% if message %}
+        <p>{{ message }}</p>
+        <a href="{{ path('login') }}">Se connecter</a>
+    {% else %}
+        <p>{{ messageError }}</p>
+    {% endif %}
+
 {% endblock %}
