add MailGenerator Service and edit emails

--- a/templates/security/forgot_password.html.twig
+++ b/templates/security/forgot_password.html.twig
@@ -8,12 +8,6 @@
         </div>
     {% endfor %}
 
-    {{ form_start(form) }}
-
-    {{ form_row(form.username) }}
-
-    {{ form_row(form.submit, { 'label': 'Modifier mon mot de passe' }) }}
-
-    {{ form_end(form) }}
+    {{ form(form) }}
 
 {% endblock %}
