add reset password in SecurityController

--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -2,14 +2,9 @@
 
 {% block body %}
 
-    {% for message in app.flashes('error') %}
-        <div class="flash-notice">
-            {{ message }}
-        </div>
-    {% endfor %}
-
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <input type="submit" value="Edit" />
     {{ form_end(form) }}
 
 {% endblock %}
