--- a/templates/security/forgot_password.html.twig
+++ b/templates/security/forgot_password.html.twig
@@ -10,6 +10,7 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <input type="submit" value="Envoyer" />
     {{ form_end(form) }}
 
 {% endblock %}
