--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -9,6 +9,11 @@
             {{ message }}
         </div>
     {% endfor %}
+    {% for message in app.flashes('error') %}
+        <div class="flash-notice">
+            {{ message }}
+        </div>
+    {% endfor %}
 
     <h1>Tricks list</h1>
 
