--- a/templates/emails/forgot_password.html.twig
+++ b/templates/emails/forgot_password.html.twig
@@ -1,8 +1,9 @@
 {% block body %}
 
-    <h3>Confirmation de votre demande de changement de mot de passe.</h3>
+    <h3>Confirmation de votre demande de modification de mot de passe.</h3>
 
-    <p>Bonjour {{ user.username }}, pour modifier votre mot de passe sur <a href="http://snowtricks.com/{{ user.id }}/{{ user.passwordKey }}">Snowtricks.com/{{ user.id }}/{{ user.passwordKey }}</a> veuillez cliquer sur le liens suivant :
+    <p>Bonjour {{ user.username }}, pour modifier votre mot de passe sur <a href="http://snowtricks.com">Snowtricks.com</a>,
+        Veuillez cliquer sur le liens suivant : <a href="http://snowtricks.com/{{ user.id }}/{{ user.passwordKey }}">Snowtricks.com/{{ user.id }}/{{ user.passwordKey }}</a>
     </p>
 
 {% endblock %}
