--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,18 +5,14 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-        {#<input type="text" id="username" name="_username" value="{{ last_username }}" />#}
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
+<form action="{{ path('login') }}" method="post">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-    {{ form_start(form) }}
-    {{ form_row(form._username) }}
-    {{ form_row(form._password) }}
-    <input type="submit" value="Envoyer" />
-    {{ form_end(form) }}
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="_password" />
+
+    <button type="submit">login</button>
 
     <div>
         <a href="{{ path('home_page') }}">S'inscrire.</a>
