edit tricks repository and edit trick details for comments

--- a/templates/tricks/details.html.twig
+++ b/templates/tricks/details.html.twig
@@ -28,4 +28,12 @@
         </tr>
         </tbody>
     </table>
+    <div>
+        {% for comment in comments  %}
+        <div class="comment{{ comment.id }}">
+            {{ comment.author.username }}
+            {{ comment.comment }}
+        </div>
+        {% endfor %}
+    </div>
 {% endblock %}
