--- a/templates/tricks/details.html.twig
+++ b/templates/tricks/details.html.twig
@@ -33,7 +33,7 @@
         <div class="comment{{ comment.id }}">
             {{ comment.author.username }}
             {{ comment.comment }}
-            {{ comment.dateTime|date("F jS \\a\\t g:ia", "Europe/Paris") }}
+            {{ comment.dateTime|date("Y-m-d H:i", "Europe/Paris") }}
         </div>
         {% endfor %}
     </div>
