add edit for illustrations

--- a/templates/illustrations/new.html.twig
+++ b/templates/illustrations/new.html.twig
@@ -9,7 +9,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('home_page') }}">Back to the list</a>
+            <a href="{{ path('trick_details',{ 'id': tricks.id }) }}">Back to the figure</a>
         </li>
     </ul>
 {% endblock %}
