edit tricks.new.html.twig for script

--- a/templates/tricks/new.html.twig
+++ b/templates/tricks/new.html.twig
@@ -29,6 +29,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('build/js/newVideo.js') }}"></script>
-    <script src="{{ asset('build/js/newIllustration.js') }}"></script>
+    <script src="{{ asset('build/js/newInput.js') }}"></script>
 {% endblock %}
