--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -1,53 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SnowTricks{% endblock %}
-
 {% block body %}
-
-    {% for message in app.flashes('message') %}
-        <div class="flash-notice">
-            {{ message }}
+    <section class="container-fluid index_section1 col-xs-12">
+        <div class="welcome_message">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <h1 class="title">snowtricks</h1>
+                <h5>Le site communautaire pour apprendre les figures de snowboard</h5>
+            </div>
+            <i class="arrow-down fas fa-arrow-down"></i>
         </div>
-    {% endfor %}
-
-    <h1>Tricks list</h1>
-
-    <table>
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Groupe</th>
-            <th>Image</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for trick in tricks %}
-            <tr>
-                <td><a href="{{ path('trick_details', { 'id': trick.id }) }}">{{ trick.id }}</a></td>
-                <td>{{ trick.name }}</td>
-                <td>{{ trick.description }}</td>
-                <td>{{ trick.group.name }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('trick_details', { 'id': trick.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('trick_edit', { 'id': trick.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
+    </section>
+    <section class="container index_section2 col-xs-12">
+        {% for message in app.flashes('message') %}
+            <div class="flash-notice">
+                {{ message }}
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
+        {% for trick in tricks %}
+            <div class="{{ trick.name }} container">
+                <div>
+                {% if trick.illustration is empty %}
+                    <img class="tricks_one_illustration" src="{{ illustrations_folder }}/default.jpg"
+                         alt="image par default">
+                {% else %}
+                    {% for img in trick.illustration %}
+                        <img class="tricks_one_illustration" src="{{ illustrations_folder }}/{{ img.name }}"
+                             alt="image {{ trick.name }}">
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div class="d-flex justify-content-between">
+                <p>{{ trick.name }}</p>
+                <div class="div_button">
+                <a class="button" href="{{ path('trick_edit', { 'id': trick.id }) }}"><i class="fas fa-pencil-alt"></i></a>
+                <a class="button" href="{{ path('trick_delete_url', { 'id': trick.id }) }}"><i class="fas fa-trash-alt"></i></a>
+                </div>
+            </div>
+            </div>
+        {% endfor %}
+    </section>
 
-    <ul>
-        <li>
-            <a href="{{ path('trick_new') }}">Create a new trick</a>
-        </li>
-    </ul>
 {% endblock %}
