--- a/templates/tricks/details.html.twig
+++ b/templates/tricks/details.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SnowTricks - details{% endblock %}
+{% block title %}{{ tricks.name }} - SnowTricks{% endblock %}
 
 {% block body %}
     <h1>Trick</h1>
