--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,16 +1,49 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>User creation</h1>
+    <section class="registration-section">
+        <div class="container border form-group d-flex align-items-center flex-column justify-content-around">
+            <h1>Inscription</h1>
 
-    {% for message in app.flashes('message') %}
-        <div class="flash-notice">
-            {{ message }}
+            {% for message in app.flashes('message') %}
+                <div class="flash-notice">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            {{ form_start(form) }}
+                <div class="form-group d-flex flex-column align-items-center">
+                    {{ form_label(form.username) }}
+                    {{ form_errors(form.username) }}
+                    {{ form_widget(form.username) }}
+                </div>
+
+                <div class="form-group d-flex flex-column align-items-center">
+                {{ form_label(form.email) }}
+                {{ form_errors(form.email) }}
+                {{ form_widget(form.email) }}
+                </div>
+
+                <div class="form-group d-flex flex-column align-items-center">
+                {{ form_label(form.plainPassword) }}
+                {{ form_errors(form.plainPassword) }}
+                {{ form_widget(form.plainPassword) }}
+                </div>
+
+                <div class="form-group d-flex flex-column align-items-center">
+                {{ form_label(form.avatar) }}
+                {{ form_errors(form.avatar) }}
+                {{ form_widget(form.avatar) }}
+                </div>
+
+            <div class="form-group d-flex flex-column align-items-center">
+            <button class="btn btn-primary btn-primary-blue-reverse" type="submit">Créer un compte</button>
+            </div>
+
+            {{ form_end(form) }}
+            <div class="div-a d-flex flex-column align-items-center justify-content-between">
+                <a class="font-white blue-hover" href="{{ path('login') }}">Déjà un compte ?</a>
+            </div>
         </div>
-    {% endfor %}
-
-    {{ form_start(form) }}
-    <input type="submit" value="Create" />
-    {{ form_end(form) }}
-
+    </section>
 {% endblock %}
